# corintho-ai

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  annotated.html  board.py  build.sh  classDockerMC-members.html  classDockerMC.html  classDockerMC__coll__graph.map  classDockerMC__coll__graph.md5  classGame-members.html  classGame.html  classGame__coll__graph.dot  classMatch-members.html  classMatch.html  classMove-members.html  classMove.html  classMove__coll__graph.dot  classMove__coll__graph.map  classMove__coll__graph.md5  classNode-members.html  classNode.html  classNode__coll__graph.dot  classNode__coll__graph.map  classNode__coll__graph.md5  classPlayMC-members.html  classPlayMC.html  classPlayMC__coll__graph.dot  classPlayMC__coll__graph.map  classPlayMC__coll__graph.md5  classSelfPlayer-members.html  classSelfPlayer.html  classSelfPlayer__coll__graph.dot  classSelfPlayer__coll__graph.map  classSelfPlayer__coll__graph.md5  (+111 more)
bash/: play.sh  startup_script.sh
c/: game.c  game.h  move.c  move.h
config/: config.py  sample.toml
cpp/: foo.cpp  foo.h  foobar.cpp  foobar.h  game.cpp  game.d  game.h  main.c  main.cpp  main.d  main.pyx  manager.cpp  manager.h  move.cpp  move.d  move.h  node.cpp  node.d  node.h  out  playmc.cpp  playmc.h  random.cpp  selfplayer.cpp  selfplayer.d  selfplayer.h  setup.py  test.cpp  test.py  trainer.cpp  trainer.d  trainer.h  trainmc.cpp  trainmc.d  trainmc.h  util.cpp  util.h
cython/: board.c  board.html  board.pxd  board.pyx  game.pyx  move.c  move.html  move.pxd  move.pyx  setup.py  (+5 more)
(+494 files in other folders)
